--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
-﻿@using CarMarketplace.Web
-@using CarMarketplace.Web.ViewModels
+﻿@using CarMarketplace.Web;
+@using System.Web.Helpers;
+@using CarMarketplace.Web.ViewModels;
 @using CarMarketplace.Web.ViewModels.Catalog;
 @using CarMarketplace.Web.ViewModels.User;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
