--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using CarMarketplace.Web;
 @using System.Web.Helpers;
 @using CarMarketplace.Web.ViewModels;
-@using CarMarketplace.Web.ViewModels.Catalog;
+@using CarMarketplace.Services.Contracts;
 @using CarMarketplace.Web.ViewModels.User;
+@using CarMarketplace.Web.ViewModels.Catalog;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
