--- a/CarMarketplace.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,27 @@
 ﻿@using CarMarketplace.Data.Models;
+@using CarMarketplace.Services.Contracts;
 @using Microsoft.AspNetCore.Identity
+@using System.Security.Claims;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+
+@inject ISellerService SellerService
+@{
+    bool isSeller = await SellerService.SellerExistbyUserIdAsync(User.FindFirstValue(ClaimTypes.NameIdentifier)).ConfigureAwait(false);
+}
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="User" asp-Action="BecomeSeller" title="Become">Become a seller!</a>
-        </li>
-        <li class="nav-item">
+        @if (!isSeller)
+        {         
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="User" asp-Action="BecomeSeller" title="Become">Become a seller!</a>
+            </li>
+        }
+        @*<li class="nav-item">
             <a class="nav-link text-dark" asp-controller="User" asp-Action="BecomeLender" title="Become">Become a lender!</a>
-        </li>
+        </li>*@
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
