Added 2 more views

--- a/CarMarketplace.Web/Views/Catalog/Catalog.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Catalog.cshtml
@@ -36,7 +36,7 @@
                             <span class="fs-1">@post.Car.Province</span>
                             <br>
                             <div class="mt-4 text-end">
-                                <span class="fs-3">@post.PublishDate.ToString("HH:mm:ss MM/dd/yyyy")</span>
+                                <span class="fs-3">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
                             </div>
                         </div>
                     </div>
